Bug 191750 - khtml/xml/dom_elementimpl.h won't compile on opensolaris (with patch)
Summary: khtml/xml/dom_elementimpl.h won't compile on opensolaris (with patch)
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Solaris
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2009-05-05 22:39 UTC by tropikhajma
Modified: 2010-01-12 22:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch (994 bytes, patch)
2009-05-05 22:40 UTC, tropikhajma
Details
patch for current svn (831 bytes, patch)
2010-01-04 19:01 UTC, tropikhajma
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tropikhajma 2009-05-05 22:39:23 UTC
Version:           4.2.71 (using Devel)
Compiler:          Sun Studio 12 
OS:                Solaris
Installed from:    Compiled sources

when building kdelibs on opensolaris with Sun Studio 12, it fails with:
...
"/export/home/test/packages/BUILD/kdelibs-4.2.71.svn961800/khtml/xml/dom_elementimpl.h", line 134: Error: Different types for "?:" (DOM::DOMStringImpl*const and bool).

(more at http://pastebin.ca/1413482)
Comment 1 tropikhajma 2009-05-05 22:40:11 UTC
Created attachment 33381 [details]
patch
Comment 2 tropikhajma 2009-12-11 07:53:09 UTC
see the failure in kde-dashboard:
http://my.cdash.org/index.php?project=kdelibs&date=2009-12-11
Comment 3 tropikhajma 2009-12-11 16:08:33 UTC
still valid
Comment 4 David Faure 2009-12-24 20:10:43 UTC
SVN commit 1065909 by dfaure:

make the getter const, can't hurt, and might help compilation on Solaris
CCBUG: 191750


 M  +1 -1      dom_elementimpl.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1065909
Comment 5 tropikhajma 2010-01-04 17:33:35 UTC
issue persists in current svn
Comment 6 tropikhajma 2010-01-04 19:01:58 UTC
Created attachment 39560 [details]
patch for current svn
Comment 7 Maksim Orlovich 2010-01-04 19:08:07 UTC
What's the current error message? The patch seems safe, but also completely unnecessary.
Comment 8 tropikhajma 2010-01-04 19:23:48 UTC
the current error message:

"/home/hajma/Dashboards/kdelibs/srcdir/khtml/xml/dom_elementimpl.h", line 135: Error: Different types for "?:" (DOM::DOMStringImpl*const and bool).
Comment 9 Maksim Orlovich 2010-01-12 22:11:01 UTC
SVN commit 1073782 by orlovich:

Apply a patch from tropikhajma (tropikhajma at gmail tld com) to workaround 
and apparent SunStudio bug.

Additional credit goes to cmake for deciding to rebuild everything for some reason, 
hence removing that disencentive from me.

BUG: 191750


 M  +1 -1      dom_elementimpl.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1073782
Comment 10 Maksim Orlovich 2010-01-12 22:13:21 UTC
SVN commit 1073784 by orlovich:

automatically merged revision 1073782:
Apply a patch from tropikhajma (tropikhajma at gmail tld com) to workaround 
and apparent SunStudio bug.

Additional credit goes to cmake for deciding to rebuild everything for some reason, 
hence removing that disencentive from me.

BUG: 191750

 M  +1 -1      dom_elementimpl.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1073784