automatically merged revision 1073782: Apply a patch from tropikhajma (tropikhajma at gmail tld com) to workaround and apparent SunStudio bug.

Additional credit goes to cmake for deciding to rebuild everything for some reason, 
hence removing that disencentive from me.

BUG: 191750

svn path=/branches/KDE/4.4/kdelibs/; revision=1073784